# BA-Assist

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  sse.ts  types.ts
frontend/src/components/analysis/: AnalysisReport.tsx  IssuesTable.tsx  SuggestionsList.tsx
frontend/src/components/compare/: CompareView.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/shared/: FileUpload.tsx  ProgressStream.tsx  (+2 more)
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: AnalysePage.tsx  ComparePage.tsx  ConfigPage.tsx  ExportPage.tsx  IteratePage.tsx  StoriesPage.tsx
frontend/src/stores/: configStore.ts
src/ba_analyser/: __init__.py  anthropic_client.py  bedrock_client.py  cli.py  config.py  detector.py  display.py  iteration.py  models.py
src/ba_analyser/analysers/: base.py  process_analyser.py  requirements_analyser.py  story_analyser.py
src/ba_analyser/api/: app.py  dependencies.py  schemas.py  session_manager.py  sse.py
src/ba_analyser/generators/: claude_code_export.py  exporters.py  story_generator.py
src/ba_analyser/prompts/: process_analysis.py  requirements_analysis.py  story_generation.py  user_story_analysis.py
tests/: test_bedrock_client.py  test_cli.py  test_detector.py  test_display.py  test_exporter.py  test_generator.py  test_iteration.py  test_process.py  test_requirements.py  test_stories.py
tests/fixtures/: bad_requirements.md  good_requirements.md  sample_process.md  sample_stories.md
(+9 files in other folders)
